Style Find Traineeship Search page and Search Result page, added spacing between dl list items
Mobile styles enhanced on search result page, FAA pages edited to sync
up with FT search result page

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
@@ -114,11 +114,11 @@
                             <tr>
                                 <td class="sfa-align-center">
                                     @Html.FormUnvalidatedCheckBoxFor(m => m.EnableApplicationStatusChangeAlertsViaEmail,
-                                        controlHtmlAttributes: new {@class = "no-margins email-input", aria_labelledby = "appStatusLabel", title = "Email notifications when the status of one of your applications changes"})
+                                        controlHtmlAttributes: new {@class = "sfa-no-margins email-input", aria_labelledby = "appStatusLabel", title = "Email notifications when the status of one of your applications changes"})
                                 </td>
                                 <td class="sfa-align-center">
                                     @Html.FormUnvalidatedCheckBoxFor(m => m.EnableApplicationStatusChangeAlertsViaText,
-                                        controlHtmlAttributes: new {@class = "no-margins text-input", aria_labelledby = "appStatusLabel", title = "Text notifications when the status of one of your applications changes"})
+                                        controlHtmlAttributes: new {@class = "sfa-no-margins text-input", aria_labelledby = "appStatusLabel", title = "Text notifications when the status of one of your applications changes"})
                                 </td>
                                 <td id="appStatusLabel">
                                     the status of one of your applications changes
@@ -127,11 +127,11 @@
                             <tr>
                                 <td class="sfa-align-center">
                                     @Html.FormUnvalidatedCheckBoxFor(m => m.EnableExpiringApplicationAlertsViaEmail,
-                                        controlHtmlAttributes: new {@class = "no-margins email-input", aria_labelledby = "closingDateStatusLabel", title = "Email notifications when an apprenticeship is approaching its closing date"})
+                                        controlHtmlAttributes: new {@class = "sfa-no-margins email-input", aria_labelledby = "closingDateStatusLabel", title = "Email notifications when an apprenticeship is approaching its closing date"})
                                 </td>
                                 <td class="sfa-align-center">
                                     @Html.FormUnvalidatedCheckBoxFor(m => m.EnableExpiringApplicationAlertsViaText,
-                                        controlHtmlAttributes: new {@class = "no-margins text-input", aria_labelledby = "closingDateStatusLabel", title = "Text notifications when an apprenticeship is approaching its closing date"})
+                                        controlHtmlAttributes: new {@class = "sfa-no-margins text-input", aria_labelledby = "closingDateStatusLabel", title = "Text notifications when an apprenticeship is approaching its closing date"})
                                 </td>
                                 <td id="closingDateStatusLabel">
                                     an apprenticeship is approaching its closing date
@@ -140,11 +140,11 @@
                             <tr>
                                 <td class="sfa-align-center">
                                     @Html.FormUnvalidatedCheckBoxFor(m => m.EnableMarketingViaEmail,
-                                        controlHtmlAttributes: new {@class = "no-margins email-input", aria_labelledby = "marketingUpdatesStatusLabel", title = "Email notifications when we send you updates on news and information"})
+                                        controlHtmlAttributes: new {@class = "sfa-no-margins email-input", aria_labelledby = "marketingUpdatesStatusLabel", title = "Email notifications when we send you updates on news and information"})
                                 </td>
                                 <td class="sfa-align-center">
                                     @Html.FormUnvalidatedCheckBoxFor(m => m.EnableMarketingViaText,
-                                        controlHtmlAttributes: new {@class = "no-margins text-input", aria_labelledby = "marketingUpdatesStatusLabel", title = "Text notifications when we send you updates on news and information"})
+                                        controlHtmlAttributes: new {@class = "sfa-no-margins text-input", aria_labelledby = "marketingUpdatesStatusLabel", title = "Text notifications when we send you updates on news and information"})
                                 </td>
                                 <td id="marketingUpdatesStatusLabel">
                                     we send you updates on news and information
