--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Apply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Apply.cshtml
@@ -106,7 +106,7 @@
 
 }
 
-<div class="saving-prompt toggle-content hide-nojs" id="savedNotification">
+<div class="sfa-saving-prompt toggle-content hide-nojs" id="savedNotification">
     Saved
 </div>
 
