--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/Dashboard.cshtml
@@ -79,7 +79,7 @@
                             </a>
                         }
                     </div>
-                    <button type="submit" id="search-vacancies-button-manage" class="search-btn no-margins button" name="DashboardAction" value="SearchVacancies">
+                    <button type="submit" id="search-vacancies-button-manage" class="search-btn sfa-no-margins button" name="DashboardAction" value="SearchVacancies">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
@@ -119,7 +119,7 @@
                             }
                         }
 
-<div class="saving-prompt toggle-content hide-nojs" id="ajaxLoading">
+<div class="sfa-saving-prompt toggle-content hide-nojs" id="ajaxLoading">
     Loading
 </div>
 @section scripts
