--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
@@ -116,7 +116,7 @@
     </div>
 </div>
 
-<div class="saving-prompt toggle-content hide-nojs" id="ajaxLoading">
+<div class="sfa-saving-prompt toggle-content hide-nojs" id="ajaxLoading">
     Loading
 </div>
 
