--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_pagination.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_pagination.cshtml
@@ -8,17 +8,17 @@
 
 @if (Model.TotalHits > 0)
 {
-    <div class="page-navigation">
+    <div class="page-navigation grid-row">
         <a href="@prevLink"
            style="visibility: @(Model.VacancySearch.PageNumber == 1 ? "hidden" : "visible")"
-           class="page-navigation__btn previous">
+           class="page-navigation__btn previous column-half">
             <i class="arrow-button fa fa-angle-left"></i>
             <span class="description">Previous <span class="sfa-hide-mobile">page</span></span>
             <span class="counter">@Model.PrevPage of @pages</span>
         </a>
         <a href="@nextLink"
            style="visibility: @(Model.VacancySearch.PageNumber == pages ? "hidden" : "visible")"
-           class="page-navigation__btn next">
+           class="page-navigation__btn next column-half">
             <i class="arrow-button fa fa-angle-right"></i>
             <span class="description">Next <span class="sfa-hide-mobile">page</span></span>
             <span class="counter">@Model.NextPage of @pages</span>
