--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_page-nav.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_page-nav.scss
@@ -1,6 +1,5 @@
 ﻿
 .page-navigation {
-    padding-top: 10px
 }
 
 .page-navigation .description {
@@ -23,10 +22,10 @@
     font-size: 1em;
     margin-right: -4px;
     overflow: hidden;
-    padding: 1.2em .6em;
+    padding: 1.2em .6em 1.2em .6em !important;
     text-decoration: none;
     vertical-align: top;
-    width: 50%
+    width: 50%;
 }
 
 .page-navigation__btn .arrow-button {
@@ -34,7 +33,8 @@
     float: left;
     font-size: 3.5em;
     margin-right: 10px;
-    margin-top: -.2em
+    margin-top: -.2em;
+    margin-bottom: -.2em;
 }
 
 .page-navigation__btn.previous {
