--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Search.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Search.cshtml
@@ -149,7 +149,7 @@
     }
 }
 
-<div class="saving-prompt toggle-content hide-nojs" id="ajaxLoading">
+<div class="sfa-saving-prompt toggle-content hide-nojs" id="ajaxLoading">
     Loading
 </div>
 
