--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -108,7 +108,7 @@
         <section class="sfa-section-bordered">
             <div class="grid-row grid-row-padded">
                 <div class="column-one-half">
-                    <h2 class="heading-large no-margins">
+                    <h2 class="heading-large sfa-no-margins">
                         Your @vacanciesLabel
                         @if (filterType != VacanciesSummaryFilterTypes.All || !string.IsNullOrEmpty(searchString))
                         {
@@ -131,7 +131,7 @@
                                 </i><span>Reset search</span>
                             </a>
                         }
-                        <button id="search-vacancies-button" type="submit" class="button search-btn no-margins" name="SearchVacanciesAction" value="SearchVacancies">
+                        <button id="search-vacancies-button" type="submit" class="button search-btn sfa-no-margins" name="SearchVacanciesAction" value="SearchVacancies">
                             <i class="icon icon-search"></i><span>Search</span>
                         </button>
                     </div>
@@ -563,7 +563,7 @@
                             }
                         }
 
-<div class="saving-prompt toggle-content hide-nojs" id="ajaxLoading">
+<div class="sfa-saving-prompt toggle-content hide-nojs" id="ajaxLoading">
     Loading
 </div>
 
