--- a/src/SFA.Apprenticeships.Web.Common/Views/Shared/_ApprenticeMinimumWageExplained.cshtml
+++ b/src/SFA.Apprenticeships.Web.Common/Views/Shared/_ApprenticeMinimumWageExplained.cshtml
@@ -1,4 +1,4 @@
-﻿@using SFA.Apprenticeships.Infrastructure.Presentation.Constants
+﻿@using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies.Constants
 @model DateTime
 
 <details>
