--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/EditWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/EditWage.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.ProviderUser
+﻿@using SFA.Apprenticeships.Web.Common.Constants.ViewModels
+@using SFA.Apprenticeships.Web.Common.ViewModels
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.VacancyManagement.EditWageViewModel
@@ -11,9 +12,69 @@
     Increase vacancy wage
 </h1>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.EditWage, new RouteValueDictionary { { "vacancyReferenceNumber", Model.VacancyReferenceNumber } }, FormMethod.Post, new { id = "edit-wage-form" }))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.EditWage, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, FormMethod.Post, new { id = "edit-wage-form" }))
 {
     <div>
+
+        <div class="blocklabel-single-container">
+            <a name="@Html.NameFor(m => m.Classification).ToString().ToLower()"></a>
+            <label class="form-label-bold" for="weekly-wage">Wage</label>
+            <div class="form-group">
+                @* ReSharper disable once Html.IdNotResolved *@
+                <label for="national-minimum-wage" class="block-label selection-button-radio vertically-stacked">
+                    @Html.RadioButtonFor(model => model.Classification, WageClassification.NationalMinimum, new { id = "national-minimum-wage", aria_controls = "wage-type-panel" })
+                    National Minimum Wage
+                </label>
+                @* ReSharper disable once Html.IdNotResolved *@
+                <label for="apprenticeship-minimum-wage" class="block-label selection-button-radio vertically-stacked">
+                    @Html.RadioButtonFor(model => model.Classification, WageClassification.ApprenticeshipMinimum, new { id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel" })
+                    National Minimum Wage for apprentices
+                </label>
+                @* ReSharper disable once Html.IdNotResolved *@
+                <label for="custom-wage" class="block-label selection-button-radio vertically-stacked" data-target="custom-wage-panel">
+                    @Html.RadioButtonFor(model => model.Classification, WageClassification.Custom, new { id = "custom-wage", aria_controls = "wage-type-panel" })
+                    Custom wage
+                </label>
+                <div id="custom-wage-panel" class="toggle-content blocklabel-content nested-panel-1 clearfix">
+                    <div class="panel panel-border-narrow">
+                        <fieldset class="form-group inline-fixed">
+                            @* ReSharper disable once Html.IdNotResolved *@
+                            <span class="clearfix">Select type</span>
+                            <label for="custom-wage-fixed" class="block-label selection-button-radio" data-target="custom-wage-fixed-panel">
+                                @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Fixed, new { id = "custom-wage-fixed", aria_controls = "custom-wage-panel" })
+                                Fixed wage
+                            </label>
+                            @* ReSharper disable once Html.IdNotResolved *@
+                            <label for="custom-wage-range" class="block-label selection-button-radio" data-target="custom-wage-range-panel">
+                                @Html.RadioButtonFor(model => model.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
+                                Wage range
+                            </label>
+                            @Html.ValidationMessageFor(m => m.CustomType)
+                        </fieldset>
+                        <div id="custom-wage-fixed-panel" class="toggle-content blocklabel-content">
+                            <fieldset class="nested-panel-2 form-group inline-fixed">
+                                <span class="clearfix">@Html.Label(WageViewModelMessages.AmountMessages.HelpText)</span>
+                                £
+                                @Html.FormTextFor(m => m.Amount, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12 })
+                                @Html.DropDownListFor(m => m.Unit, Model.WageUnits, new { @class = "form-control" })
+                            </fieldset>
+                        </div>
+                        <div id="custom-wage-range-panel" class="toggle-content blocklabel-content">
+                            <fieldset class="nested-panel-2 form-group inline-fixed @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.AmountLowerBound))
+                                            @HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.AmountUpperBound))">
+                                <span class="clearfix">@Html.Label(WageViewModelMessages.AmountRangeMessages.HelpText, new { @class = "form-hint" })</span>
+                                £
+                                @Html.FormTextFor(m => m.AmountLowerBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12, placeholder = "min" })
+                                &nbsp;to&nbsp;£
+                                @Html.FormTextFor(m => m.AmountUpperBound, containerHtmlAttributes: new { @class = "form-group-compound" }, labelHtmlAttributes: new { style = "Display: none" }, controlHtmlAttributes: new { @class = "form-control-large", type = "tel", size = 12, placeholder = "max" })
+                                @Html.DropDownListFor(m => m.RangeUnit, Model.WageUnits, new { @class = "form-control" })
+                            </fieldset>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="form-group">
             <button class="button" type="submit" id="editWageButton" name="EditWage" value="EditWage">Save and return</button>
 
@@ -22,7 +83,7 @@
                     RecruitmentRouteNames.VacancyApplications :
                     RecruitmentRouteNames.PreviewVacancy;
 
-                @Html.RouteLink("Cancel", routeName, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
+                @Html.RouteLink("Cancel", routeName, new {vacancyReferenceNumber = Model.VacancyReferenceNumber})
             }
         </div>
     </div>
